zone (#51)
* zone

* chore: validate enum

* feat: zones

---------

Co-authored-by: Arishemm <arishem51@gmail.com>