@@ -1,6 +1,7 @@
 package com.example.backend.security.validation;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jakarta.validation.ConstraintValidator;
@@ -13,14 +14,16 @@ public class EnumValidator implements ConstraintValidator<ValidEnum, CharSequenc
     public void initialize(ValidEnum constraintAnnotation) {
         acceptedValues = Stream.of(constraintAnnotation.enumClass().getEnumConstants())
                 .map(Enum::name)
-                .toList();
+                .map(String::toUpperCase)
+                .collect(Collectors.toList());
     }
 
     @Override
     public boolean isValid(CharSequence value, ConstraintValidatorContext context) {
-        if (value == null) {
+        if (value == null || value.length() == 0) {
             return false;
         }
+        System.out.println("AA + " + acceptedValues + " " + value.toString().toUpperCase());
         return acceptedValues.contains(value.toString().toUpperCase());
     }
 }
